<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogV"
      android:text="log-v" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogD"
      android:text="log-d" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogI"
      android:text="log-i" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogW"
      android:text="log-w" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogE"
      android:text="log-e" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogA"
      android:text="log-a" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogJson"
      android:text="log-json" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogTrace"
      android:text="log-trace" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickLogInnerClass"
      android:text="log-inner-class" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickFetchLogList"
      android:text="fetch-log-list" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickZipLogFile"
      android:text="zip-log-file-all" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickZipLogFileWithTime"
      android:text="zip-log-file-with-time" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickCheckUIMonitor"
      android:text="check-ui-monitor" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickCheckThrow"
      android:text="check-throw" />
    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickCheckBugly"
      android:text="check-bugly" />

    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="onClickCheckEffectRun"
      android:text="effect-run" />

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>